--- a/v1/services/docker-compose.yml
+++ b/v1/services/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 services:
   zookeeper:
     image: wurstmeister/zookeeper:latest
@@ -32,6 +32,18 @@ services:
       POSTGRES_DB: root
     volumes:
       - postgres:/var/lib/postgresql/data
+
+  bastion:
+    build:
+      context: ./Bastion
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      DATABASE_URL: postgres://postgres:secret@postgres:5432/postgres
+      APP_ENV: production
+      PORT: 3000
+    restart: always
 
 volumes:
   postgres: ~
