--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -2,29 +2,25 @@
 
 quarkus.kafka.devservices.enabled=false
 
-mp.messaging.incoming.shipments-in.connector=smallrye-kafka
-mp.messaging.incoming.shipments-in.topic=Shipments
-mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentDeserializer
-mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-mp.messaging.incoming.order-validation-in.connector=smallrye-kafka
-mp.messaging.incoming.order-validation-in.topic=OrdersValidations
-mp.messaging.incoming.order-validation-in.value.deserializer=com.arconsis.domain.ordersvalidations.OrderValidationDeserializer
-mp.messaging.incoming.order-validation-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.warehouse-in.connector=smallrye-kafka
+mp.messaging.incoming.warehouse-in.topic=postgres.public.warehouse_outbox_events
+mp.messaging.incoming.warehouse-in.value.deserializer=com.arconsis.presentation.events.common.WarehouseEventsDtoDeserializer
+mp.messaging.incoming.warehouse-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.warehouse-in.broadcast=true
 
 mp.messaging.incoming.payments-in.connector=smallrye-kafka
-mp.messaging.incoming.payments-in.topic=Payments
-mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.domain.payments.PaymentDeserializer
+mp.messaging.incoming.payments-in.topic=postgres.public.payments_outbox_events
+mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.presentation.events.payments.PaymentEventsDtoDeserializer
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
-kafka.producer.bootstrap.servers=localhost:9092
+kafka.producer.bootstrap.servers=localhost:19092
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
 kafka.client.id=order-service-producer
 
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=localhost:19092
 %prod.kafka.security.protocol = SSL
 
 ## Database
