--- a/v2/services/WarehouseService/src/main/resources/application.properties
+++ b/v2/services/WarehouseService/src/main/resources/application.properties
@@ -3,18 +3,18 @@
 quarkus.kafka.devservices.enabled=false
 
 mp.messaging.incoming.order-in.connector=smallrye-kafka
-mp.messaging.incoming.order-in.topic=Orders
-mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.order-in.topic=postgres.public.orders_outbox_events
+mp.messaging.incoming.order-in.value.deserializer=com.arconsis.presentation.events.orders.OrderEventsDtoDeserializer
 mp.messaging.incoming.order-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
-kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
 kafka.client.id=warehouse-service-producer
 
-kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092}
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 %prod.kafka.security.protocol = SSL
 
 ## Database
