EDA-124 Improve k8s namings

--- a/v1/kubernetes/Bastion/temp-secret.yaml
+++ b/v1/kubernetes/Bastion/temp-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: bastion-secrets
+  name: bastion-app-secrets
   namespace: eshop-eda
 type: Opaque
 data:
