--- a/v1/kubernetes/EmailService/temp-secret.yaml
+++ b/v1/kubernetes/EmailService/temp-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: email-service-secrets
+  name: email-app-secrets
   namespace: eshop-eda
 type: Opaque
 data:
