--- a/v1/kubernetes/OrderService/deployment.yaml
+++ b/v1/kubernetes/OrderService/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-backend
+  name: order-app
   labels:
-    app: order-backend
+    app: order-app
   namespace: eshop-eda
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: order-backend
+      name: order-app
   template:
     metadata:
       labels:
-        name: order-backend
+        name: order-app
     spec:
       containers:
-      - name: order-api
+      - name: order-eda
         imagePullPolicy: Always
         image: eldimious/order-eda-v1:latest
         ports:
