--- a/v1/kubernetes/PaymentService/deployment.yaml
+++ b/v1/kubernetes/PaymentService/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: payment-backend
+  name: payment-app
   labels:
-    app: payment-backend
+    app: payment-app
   namespace: eshop-eda
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: payment-backend
+      name: payment-app
   template:
     metadata:
       labels:
-        name: payment-backend
+        name: payment-app
     spec:
       containers:
-      - name: payment-api
+      - name: payment-eda
         imagePullPolicy: Always
         image: eldimious/payment-eda-v1:latest
         ports:
