--- a/v1/kubernetes/PaymentService/temp-secret.yaml
+++ b/v1/kubernetes/PaymentService/temp-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: payments-service-secrets
+  name: payments-app-secrets
   namespace: eshop-eda
 type: Opaque
 data:
