--- a/v1/kubernetes/UserService/deployment.yaml
+++ b/v1/kubernetes/UserService/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user-backend
+  name: user-app
   labels:
-    app: user-backend
+    app: user-app
   namespace: eshop-eda
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: user-backend
+      name: user-app
   template:
     metadata:
       labels:
-        name: user-backend
+        name: user-app
     spec:
       containers:
-      - name: user-api
+      - name: user-eda
         imagePullPolicy: Always
         image: eldimious/user-eda-v1:latest
         ports:
