--- a/v2/services/EmailService/src/main/resources/application.properties
+++ b/v2/services/EmailService/src/main/resources/application.properties
@@ -5,9 +5,15 @@ quarkus.kafka.devservices.enabled=false
 
 # Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
-mp.messaging.incoming.orders-in.topic=Orders
-mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.orders-in.topic=postgres.public.orders_outbox_events
+mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.presentation.events.orders.OrderEventsDtoDeserializer
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Users Topic
+mp.messaging.incoming.users-in.connector=smallrye-kafka
+mp.messaging.incoming.users-in.topic=postgres.public.users_outbox_events
+mp.messaging.incoming.users-in.value.deserializer=com.arconsis.presentation.events.users.UserEventsDtoDeserializer
+mp.messaging.incoming.users-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 
@@ -18,8 +24,19 @@ mailgun/mp-rest/readTimeout=60000
 mailgun/mp-rest/maxRetries=3
 email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
 
-# users-api
-users-api/mp-rest/url=${USERS_SERVICE_URL:http://localhost:8081/users}
-users-api/mp-rest/connectTimeout=60000
-users-api/mp-rest/readTimeout=60000
-users-api/mp-rest/maxRetries=3
+## Database
+datasource.url=postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:email-db}
+%dev.quarkus.datasource.reactive.url=vertx-reactive:${datasource.url}
+%prod.quarkus.datasource.reactive.url=${datasource.url}
+quarkus.datasource.username=${POSTGRES_USER:postgres}
+quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc=false
+quarkus.hibernate-orm.log.sql=true
+%prod.quarkus.datasource.reactive.postgresql.ssl-mode=allow
+
+## Database Migrations
+quarkus.flyway.migrate-at-start=false
+#%test.quarkus.flyway.migrate-at-start=false
+quarkus.flyway.clean-at-start=false
+quarkus.flyway.baseline-on-migrate=true
