EDA-124 Change bastion back to rest api

--- a/v1/kubernetes/Bastion/deployment.yaml
+++ b/v1/kubernetes/Bastion/deployment.yaml
@@ -28,4 +28,4 @@ spec:
               memory: '256Mi'
           envFrom:
             - secretRef:
-                name: bastion-secrets
+                name: bastion-app-secrets
