--- a/v1/kubernetes/UserService/deployment.yaml
+++ b/v1/kubernetes/UserService/deployment.yaml
@@ -31,5 +31,5 @@ spec:
             memory: '512Mi'
         envFrom:
         - secretRef:
-            name: users-service-secrets
+            name: users-app-secrets
             
