--- a/v1/kubernetes/WarehouseService/deployment.yaml
+++ b/v1/kubernetes/WarehouseService/deployment.yaml
@@ -31,5 +31,5 @@ spec:
             memory: '512Mi'
         envFrom:
         - secretRef:
-            name: warehouse-service-secrets
+            name: warehouse-app-secrets
             
