EDA-124 Add ingress for bastion pod with basic auth

--- a/v1/kubernetes/Bastion/temp-secret.yaml
+++ b/v1/kubernetes/Bastion/temp-secret.yaml
@@ -7,3 +7,4 @@ type: Opaque
 data:
 #  Base64 decoded database url string
   DATABASE_URL: "postgres://postgres:secret@localhost:5432/postgres"
+  AUTH: "BASIC_AUTH"
