--- a/v1/kubernetes/configs/temp-secret.yaml
+++ b/v1/kubernetes/configs/temp-secret.yaml
@@ -1,10 +1,14 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: bastion-app-secrets
+  name: eda-secrets
   namespace: eshop-eda
 type: Opaque
 data:
 #  Base64 decoded database url string
   DATABASE_URL: "postgres://postgres:secret@localhost:5432/postgres"
   AUTH: "BASIC_AUTH"
+  QUARKUS_MAILGUN_API_KEY:
+  USERS_SERVICE_URL:
+  POSTGRES_USER:
+  POSTGRES_PASSWORD:
