EDA-124 Add container port definition to bastion

--- a/v1/kubernetes/Bastion/deployment.yaml
+++ b/v1/kubernetes/Bastion/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         - name: bastion-eda
           imagePullPolicy: Always
           image: akoufa/bastion-eda-v1:latest
+          ports:
+            - containerPort: 3000
+              protocol: TCP
           resources:
             limits:
               cpu: '300m'
