EDA-124 Fix k8s service files

--- a/v1/kubernetes/Bastion/service.yaml
+++ b/v1/kubernetes/Bastion/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 3000
+    - protocol: TCP
+      port: 3000
       targetPort: 3000
-      protocol: TCP
   selector:
-    name: bastion
+    app: bastion
