--- a/v1/kubernetes/configs/temp-secret.yaml
+++ b/v1/kubernetes/configs/temp-secret.yaml
@@ -7,7 +7,7 @@ type: Opaque
 data:
 #  Base64 decoded database url string
   DATABASE_URL: "postgres://postgres:secret@localhost:5432/postgres"
-  AUTH: "BASIC_AUTH"
+  auth: "BASIC_AUTH"
   QUARKUS_MAILGUN_API_KEY:
   USERS_SERVICE_URL:
   POSTGRES_USER:
