--- a/v1/kubernetes/Bastion/bastion-ingress.yaml
+++ b/v1/kubernetes/Bastion/bastion-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
     nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: bastion-app-secrets
+    nginx.ingress.kubernetes.io/auth-secret: eda-secrets
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
   rules:
