--- a/v1/kubernetes/OrderService/service.yaml
+++ b/v1/kubernetes/OrderService/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
   selector:
-    name: order-app
+    app: order-app
