--- a/v2/kubernetes/Bastion/deployment.yaml
+++ b/v2/kubernetes/Bastion/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bastion-deployment
+  name: bastion-app
   labels:
     app: bastion
   namespace: eshop-eda
@@ -17,8 +17,11 @@ spec:
     spec:
       containers:
         - name: bastion-eda
-          imagePullPolicy: IfNotPresent
-          image: eldimious/bastion-eda:latest
+          imagePullPolicy: Always
+          image: akoufa/bastion-eda-v1:latest
+          ports:
+            - containerPort: 3000
+              protocol: TCP
           resources:
             limits:
               cpu: '300m'
@@ -26,6 +29,39 @@ spec:
             requests:
               cpu: '300m'
               memory: '256Mi'
-          envFrom:
-            - configMapRef:
-                name: bastion-configmap
+          env:
+            - name: PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: BASTION_PORT
+            - name: DEBEZIUM_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: DEBEZIUM_HOST
+            - name: USERS_CONNECTOR_JSON
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: USERS_CONNECTOR_JSON
+            - name: ORDERS_CONNECTOR_JSON
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: ORDERS_CONNECTOR_JSON
+            - name: WAREHOUSE_CONNECTOR_JSON
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: WAREHOUSE_CONNECTOR_JSON
+            - name: PAYMENTS_CONNECTOR_JSON
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: PAYMENTS_CONNECTOR_JSON
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: eda-secrets
+                  key: DATABASE_URL
