--- a/v2/kubernetes/PaymentService/service.yaml
+++ b/v2/kubernetes/PaymentService/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
   selector:
-    name: payment-backend
+    app: payment-app
