--- a/v2/kubernetes/UserService/deployment.yaml
+++ b/v2/kubernetes/UserService/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user-backend
+  name: user-app
   labels:
-    app: user-backend
+    app: user-app
   namespace: eshop-eda
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: user-backend
+      name: user-app
   template:
     metadata:
       labels:
-        name: user-backend
+        name: user-app
     spec:
       containers:
-      - name: user-api
+      - name: user-eda
         imagePullPolicy: Always
         image: eldimious/user-eda-v1:latest
         ports:
@@ -29,7 +29,35 @@ spec:
           requests:
             cpu: '200m'
             memory: '512Mi'
-        envFrom:
-        - secretRef:
-            name: users-service-secrets
+        env:
+          - name: POSTGRES_HOST
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: POSTGRES_HOST
+          - name: POSTGRES_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: POSTGRES_PORT
+          - name: POSTGRES_DB
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: POSTGRES_DB
+          - name: KAFKA_BROKERS
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: KAFKA_BROKERS
+          - name: POSTGRES_USER
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: POSTGRES_USER
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: eda-secrets
+                key: POSTGRES_PASSWORD
             
