--- a/v2/kubernetes/configs/configmap.yaml
+++ b/v2/kubernetes/configs/configmap.yaml
@@ -6,11 +6,15 @@ metadata:
 data:
   BASTION_PORT: "3000"
   KAFKA_BROKERS: ""
-  DEBEZIUM_HOST: ""
-  USERS_SERVICE_URL: ""
+  DEBEZIUM_HOST: "http://debezium-service:8083"
+  USERS_SERVICE_URL: "http://user-service:8080"
   QUARKUS_MAILGUN_DOMAIN_NAME: ""
   POSTGRES_PORT: "5432"
   POSTGRES_HOST: ""
+  ORDERS_POSTGRES_DB: "orders-db"
+  USERS_POSTGRES_DB: "users-db"
+  PAYMENTS_POSTGRES_DB: "payments-db"
+  WAREHOUSE_POSTGRES_DB: "warehouse-db"
   GROUP_ID: "1"
   CONFIG_STORAGE_TOPIC: "connect_configs"
   OFFSET_STORAGE_TOPIC: "connect_offsets"
