EDA-98 Review changes and add check to validate user id on our requests

--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.datasource.username=${POSTGRES_USER:postgres}
 quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.jdbc.timezone=UTC
-quarkus.hibernate-orm.log.sql=true
+%dev.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.sql-load-script=import-dev.sql
 #quarkus.hibernate-orm.database.generation=none
 quarkus.kafka.devservices.enabled=false
