EDA-121: Set image tag based on git sha7

--- a/.github/workflows/publish-orders-image.yml
+++ b/.github/workflows/publish-orders-image.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get short SHA
+        id: sha
+        run: echo "::set-output name=sha7::$(echo ${github.sha} | cut -c1-7)"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -28,7 +32,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: v1/orders
-          IMAGE_TAG: OrderService
+          IMAGE_TAG: ${{ steps.sha.outputs.sha7 }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
