fix #68 --- add kafka connector to produce events from users database, instead of emitting event via service

--- a/v3/services/TransformerService/src/main/resources/application.properties
+++ b/v3/services/TransformerService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-%dev.quarkus.http.port=8085
+%dev.quarkus.http.port=8087
 
 quarkus.kafka.devservices.enabled=false
-quarkus.kafka-streams.application-id=email-service
-quarkus.kafka-streams.topics=Orders,Users
+quarkus.kafka-streams.application-id=transformer-service
+quarkus.kafka-streams.topics=postgres.public.users_outbox_events
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
 # quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:9092}
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092}
@@ -21,9 +21,3 @@ kafka-streams.consumer.heartbeat.interval.ms=200
 # Use sub-folder of embedded broker, so it gets cleaned by KafkaResource between re-runs
 # This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
 %test.kafka-streams.state.dir=target/data/kafka-data/stores
-# mailgun
-mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
-mailgun/mp-rest/connectTimeout=60000
-mailgun/mp-rest/readTimeout=60000
-mailgun/mp-rest/maxRetries=3
-email.sender=${EMAIL_SENDER:dimosthenis.botsaris@arconsis.com}
