--- a/v3/.gitignore
+++ b/v3/.gitignore
@@ -1,5 +1,6 @@
 # OSX
 .DS_Store
+
 # IntelliJ
 .idea
 
@@ -55,12 +56,12 @@ yarn.lock
 # Crash log files
 crash.log
 
-# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# Exclude all .secret.auto.tfvars files, which are likely to contain sentitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 #
-*.tfvars
+*.secret.auto.tfvars
 
 .terraform/**/*
 terraform.tfstate
