--- a/v3/kubernetes/Bastion/service.yaml
+++ b/v3/kubernetes/Bastion/service.yaml
@@ -3,13 +3,13 @@ kind: Service
 metadata:
   namespace: eshop-eda
   labels:
-    app: email-service
-  name: email-service
+    app: bastion-service
+  name: bastion-service
 spec:
   type: NodePort
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 3000
+      targetPort: 3000
   selector:
-    name: email-app
+    app: bastion
