--- a/v3/kubernetes/EmailService/deployment.yaml
+++ b/v3/kubernetes/EmailService/deployment.yaml
@@ -1,27 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: email-backend
+  name: email-app
   labels:
-    app: email-backend
+    app: email-app
   namespace: eshop-eda
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: email-backend
+      name: email-app
   template:
     metadata:
       labels:
-        name: email-backend
+        name: email-app
     spec:
       containers:
-      - name: email-api
+      - name: email-eda
         imagePullPolicy: Always
         image: eldimious/email-eda-v3:latest
-        envFrom:
-        - secretRef:
-            name: email-service-secrets
         ports:
-          - containerPort: 3000
-            protocol: TCP       
+          - containerPort: 8080
+            protocol: TCP
+        resources:
+          limits:
+            cpu: '200m'
+            memory: '512Mi'
+          requests:
+            cpu: '200m'
+            memory: '512Mi'
+        env:
+          - name: KAFKA_BROKERS
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: KAFKA_BROKERS
+          - name: QUARKUS_MAILGUN_DOMAIN_NAME
+            valueFrom:
+              configMapKeyRef:
+                name: eda-configmap
+                key: QUARKUS_MAILGUN_DOMAIN_NAME
+          - name: QUARKUS_MAILGUN_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: eda-secrets
+                key: QUARKUS_MAILGUN_API_KEY
