--- a/v3/kubernetes/PaymentService/service.yaml
+++ b/v3/kubernetes/PaymentService/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 3000
-    targetPort: 3000
-    protocol: TCP
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
   selector:
-    name: payment-backend
+    name: payment-app
