--- a/v3/kubernetes/ingress.yaml
+++ b/v3/kubernetes/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: backend-ingress
+  name: eda-ingress
   namespace: eshop-eda
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -18,14 +18,14 @@ spec:
               service:
                 name: order-service
                 port:
-                  number: 3000
+                  number: 8080
           - path: /inventory
             pathType: Prefix
             backend:
               service:
                 name: warehouse-service
                 port:
-                  number: 3000
+                  number: 8080
           - path: /users
             pathType: Prefix
             backend:
