--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -14,13 +14,13 @@ mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.presentation.e
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
-kafka.producer.bootstrap.servers=localhost:19092
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
 kafka.client.id=order-service-producer
 
-kafka.bootstrap.servers=localhost:19092
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 %prod.kafka.security.protocol = SSL
 
 ## Database
