--- a/v2/kubernetes/Debezium/service.yaml
+++ b/v2/kubernetes/Debezium/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 8083
+    - protocol: TCP
+      port: 8083
       targetPort: 8083
-      protocol: TCP
   selector:
-    app: debezium-connector
+    name: debezium-connector
