--- a/v2/kubernetes/Bastion/service.yaml
+++ b/v2/kubernetes/Bastion/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 3000
+    - protocol: TCP
+      port: 3000
       targetPort: 3000
-      protocol: TCP
   selector:
-    name: bastion
+    app: bastion
