--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -14,7 +14,7 @@ mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.presentation.e
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
-kafka.producer.bootstrap.servers=localhost:19092
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
