--- a/v2/services/OrderService/gradle.properties
+++ b/v2/services/OrderService/gradle.properties
@@ -1,6 +1,6 @@
 #Gradle properties
 quarkusPluginId=io.quarkus
-quarkusPluginVersion=2.5.3.Final
+quarkusPluginVersion=2.8.0.CR1
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=2.5.3.Final
+quarkusPlatformVersion=2.8.0.CR1
