--- a/v3/services/WarehouseService/gradle.properties
+++ b/v3/services/WarehouseService/gradle.properties
@@ -1,6 +1,6 @@
 #Gradle properties
 quarkusPluginId=io.quarkus
-quarkusPluginVersion=2.6.1.Final
+quarkusPluginVersion=2.8.0.CR1
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=2.6.1.Final
+quarkusPlatformVersion=2.8.0.CR1
