EDA-0: v2 terraform deployment is working

--- a/v2/kubernetes/Debezium/deployment.yaml
+++ b/v2/kubernetes/Debezium/deployment.yaml
@@ -34,7 +34,7 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   name: eda-configmap
-                  key: KAFKA_BROKERS
+                  key: KAFKA_BROKERS_PLAINTEXT
             - name: GROUP_ID
               valueFrom:
                 configMapKeyRef:
