--- a/v1/services/docker-compose.yml
+++ b/v1/services/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - "3000:3000"
     environment:
       DATABASE_URL: postgres://postgres:secret@postgres:5432/postgres
+      DATABASE_USERNAME: postgres
       APP_ENV: production
     restart: always
 
