--- a/v2/kubernetes/configs/configmap.yaml
+++ b/v2/kubernetes/configs/configmap.yaml
@@ -6,7 +6,8 @@ metadata:
 data:
   BASTION_PORT: "3000"
   KAFKA_BROKERS: ""
-  DEBEZIUM_HOST: "http://debezium-service:8083"
+  KAFKA_BROKERS_PLAINTEXT: ""
+  DEBEZIUM_HOST: "http://debezium-service:8083/connectors"
   USERS_SERVICE_URL: "http://user-service:8080"
   QUARKUS_MAILGUN_DOMAIN_NAME: ""
   POSTGRES_PORT: "5432"
@@ -19,7 +20,7 @@ data:
   CONFIG_STORAGE_TOPIC: "connect_configs"
   OFFSET_STORAGE_TOPIC: "connect_offsets"
   STATUS_STORAGE_TOPIC: "connect_status"
-  USERS_CONNECTOR_JSON: ""
-  ORDERS_CONNECTOR_JSON: ""
-  WAREHOUSE_CONNECTOR_JSON: ""
-  PAYMENTS_CONNECTOR_JSON: ""
+  ORDERS_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASSWORD","database.dbname":"orders-db","database.server.name":"postgres","table.include.list":"public.orders_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.orders","slot.name": "orders_slot" } }'
+  WAREHOUSE_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASSWORD","database.dbname":"warehouse-db","database.server.name":"postgres","table.include.list":"public.warehouse_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.warehouse","slot.name": "warehouse_slot" } }'
+  PAYMENTS_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASSWORD","database.dbname":"payments-db","database.server.name":"postgres","table.include.list":"public.payments_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.payments","slot.name": "payments_slot" } }'
+  USERS_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASSWORD","database.dbname":"users-db","database.server.name":"postgres","table.include.list":"public.users_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.users","slot.name": "users_slot" } }'
