EDA_137: working to fix v3 deployment

--- a/v3/kubernetes/Bastion/deployment.yaml
+++ b/v3/kubernetes/Bastion/deployment.yaml
@@ -50,3 +50,8 @@ spec:
                 secretKeyRef:
                   name: eda-secrets
                   key: DATABASE_URL
+            - name: DATABASE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: eda-secrets
+                  key: POSTGRES_USER
