EDA_137: fix #137 v3 deployment on aws

--- a/v3/services/EmailService/src/main/resources/application.properties
+++ b/v3/services/EmailService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 %dev.quarkus.http.port=8085
 
+%prod.kafka.security.protocol = SSL
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=email-service
 quarkus.kafka-streams.topics=Orders,Users
