--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 %dev.quarkus.http.port=8080
 
+%prod.kafka.security.protocol = SSL
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.orders-out.connector=smallrye-kafka
 mp.messaging.outgoing.orders-out.topic=Orders
