--- a/v3/services/TransformerService/src/main/resources/application.properties
+++ b/v3/services/TransformerService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 %dev.quarkus.http.port=8087
 
+%prod.kafka.security.protocol = SSL
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=transformer-service
 quarkus.kafka-streams.topics=postgres.public.users_outbox_events
