--- a/v3/kubernetes/configs/configmap.yaml
+++ b/v3/kubernetes/configs/configmap.yaml
@@ -12,9 +12,9 @@ data:
   QUARKUS_MAILGUN_DOMAIN_NAME: ""
   POSTGRES_PORT: "5432"
   POSTGRES_HOST: ""
-  USERS_POSTGRES_DB: "users-db"
+  USERS_POSTGRES_DB: "usersDb"
   GROUP_ID: "1"
   CONFIG_STORAGE_TOPIC: "connect_configs"
   OFFSET_STORAGE_TOPIC: "connect_offsets"
   STATUS_STORAGE_TOPIC: "connect_status"
-  USERS_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASSWORD","database.dbname":"users-db","database.server.name":"postgres","table.include.list":"public.users_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.users","slot.name": "users_slot" } }'
+  USERS_CONNECTOR_JSON: '{"name":"CONNECTOR_NAME","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"DB_HOSTNAME","database.port":"5432","database.user":"DB_USER","database.password":"DB_PASS","database.dbname":"usersDb","database.server.name":"usersDb","table.include.list":"public.users_outbox_events","database.history.kafka.bootstrap.servers":"KAFKA_BROKERS_PLAINTEXT","database.history.kafka.topic":"schema-changes.users","slot.name": "users_slot" } }'
