--- a/v3/services/PaymentService/src/main/resources/application.properties
+++ b/v3/services/PaymentService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 %dev.quarkus.http.port=8083
 
+%prod.kafka.security.protocol = SSL
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=payment-service
 quarkus.kafka-streams.topics=Orders,Payments
