--- a/v3/services/Bastion/.env.temp
+++ b/v3/services/Bastion/.env.temp
@@ -1,4 +1,4 @@
-USERS_CONNECTOR_JSON={"name":"users-connector","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"postgres","database.port":"5432","database.user":"postgres","database.password":"secret","database.dbname":"postgres","database.server.name":"postgres","table.include.list":"public.users_outbox_events","database.history.kafka.bootstrap.servers":"kafka:9092","database.history.kafka.topic":"schema-changes.users","slot.name": "users_slot"}}
+USERS_CONNECTOR_JSON={"name":"users-connector","config":{"connector.class":"io.debezium.connector.postgresql.PostgresConnector","plugin.name":"pgoutput","database.hostname":"postgres","database.port":"5432","database.user":"postgres","database.password":"secret","database.dbname":"users-db","database.server.name":"postgres","table.include.list":"public.users_outbox_events","database.history.kafka.bootstrap.servers":"kafka:9092","database.history.kafka.topic":"schema-changes.users","slot.name": "users_slot"}}
 DEBEZIUM_HOST=http://localhost:8083/connectors
 DATABASE_URL=postgres://postgres:secret@localhost:5432/postgres
 APP_ENV=development
